# MDANCE

./: .gitignore  .readthedocs.yaml  AUTHORS.md  CITATION.bib  CITATION.cff  LICENSE  README.md  example.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  lint.yml
data/2D/: blobs.py  diamond9.csv
data/md/: README.md
docs/: Makefile  about.rst  api.rst  cli.rst  conf.py  getting_started.rst  index.rst  make.bat  nani.rst  requirements.txt  requirements.yaml
docs/_static/: custom.css
docs/autosummary/: mdance.cli.prime_rep.rst  mdance.cluster.rst  mdance.inputs.rst  mdance.outputs.rst  mdance.prime.rep_frames.rst  mdance.rst  mdance.tools.rst  modules.rst  molecool.calculate_distance.rst
docs/tutorials/: equal.rst  helm.rst  nani.rst  preprocessing.rst  prime.rst  shine.rst
examples/: analysis_db.py  nani101.py  postprocessing.py  preprocessing.py
examples/2D/: ellipses.csv
scripts/divine/: analysis_db.ipynb  assign_labels.py  divine_nani_best_frames_indices_6.csv  divine_nani_labels_6.csv  divine_nani_msds.csv  divine_nani_scores.csv  run_divine.py
scripts/equal/: analysis_db.ipynb  assign_labels.py  best_frames_indices_5.8.csv  cluster_labels_5.8.csv  equal_screening.csv  equal_screening_scores.csv  screen_equal.py
scripts/inputs/: normalize.py  preprocessing.ipynb
scripts/mdbirch/: mdbirch_labels_3.06.csv  run_mdbirch.py
scripts/nani/: analysis_db.ipynb  assign_labels.py  screen_nani.py
scripts/outputs/: best_frames_1.dcd  best_frames_2.dcd  best_frames_3.dcd  best_frames_4.dcd  best_frames_5.dcd  labels_1.dcd  labels_2.dcd  labels_3.dcd  labels_4.dcd  labels_5.dcd  postprocessing.ipynb
scripts/prime/: exec_rep_frames.py  exec_similarity.py  normalize.py  rep_frames.py  similarity.py
scripts/shine/: run_shine.py
src/MDANCE.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mdance/: __init__.py  _version.py  main.py
src/tools/: bts.py  esim_modules.py
tests/: test_bts.py  test_db.py  test_divine.py  test_equal.py  test_esim.py  test_helm.py  test_mdbirch.py  test_nani.py  test_preprocess.py  test_shine.py
tests/expected_outputs/: cc_sim.npy
tests/inputs/: test_preprocess.py
tests/tools/: test_bts.py  test_esim.py
tutorials/: HELM.md  MDANCE.ipynb  SHINE.ipynb  eQual.md  kmeansNANI.md  nani.md  nani.rst  prime.md
(+153 files in other folders)
