[tool.poetry]
name = "MDANCE"
version = "0.1.2"
description = "flexible n-ary clustering package for all applications."
authors = ["Lexin Chen <lxchen017@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/mqcomplab/MDANCE"
repository = "https://github.com/mqcomplab/MDANCE"
documentation = "https://github.com/mqcomplab/MDANCE/tree/main/tutorials"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = ">=1.20.0"
scikit-learn = ">=0.24.0"
MDAnalysis = ">=2.0.0"
ShapeGMM = ">=1.0.0"
torch = ">=1.8.0"